[gd_scene load_steps=8 format=3 uid="uid://d1e8j4xvn7m2p"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_enemy_script"]
[ext_resource type="Texture2D" uid="uid://blfmvygdyebxq" path="res://assets/test_sprites/idle_enemy.png" id="2_idle_sprite"]
[ext_resource type="Texture2D" uid="uid://cdcq3kkb6jbx7" path="res://assets/test_sprites/rock_enemy.png" id="3_rock_sprite"]
[ext_resource type="Texture2D" uid="uid://bt4g4vfdqtbp5" path="res://assets/test_sprites/paper_enemy.png" id="4_paper_sprite"]
[ext_resource type="Texture2D" uid="uid://dqhqrw4a4c15q" path="res://assets/test_sprites/scissor_enemy.png" id="5_scissor_sprite"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(35, 35)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 50.0

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_enemy_script")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_idle_sprite")
scale = Vector2(0.105, 0.105)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionCollision" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1")
scale = Vector2(3, 3)

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_1")

[node name="StanceLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -35.0
offset_right = 15.0
offset_bottom = -15.0
text = "‚úä"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -45.0
offset_right = 25.0
offset_bottom = -40.0
value = 100.0
show_percentage = false

[node name="DefensePoint" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -55.0
offset_right = 10.0
offset_bottom = -45.0
text = "üõ°Ô∏è"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StunIndicator" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -75.0
offset_right = 15.0
offset_bottom = -55.0
text = "üí´"
horizontal_alignment = 1
vertical_alignment = 1
visible = false

[node name="LostIndicator" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -95.0
offset_right = 15.0
offset_bottom = -75.0
text = "‚ùì"
horizontal_alignment = 1
vertical_alignment = 1
visible = false

[node name="AlertIndicator" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -115.0
offset_right = 15.0
offset_bottom = -95.0
modulate = Color(1, 0.3, 0.3, 1)
text = "‚ùó"
horizontal_alignment = 1
vertical_alignment = 1
visible = false